# netizen2

./: .env.example  .flake8  .gitignore  .pre-commit-config.yaml  Makefile  README.md  alembic.ini  docker-compose.prod.yml  docker-compose.yml  main.py  pyproject.toml
.github/workflows/: linters.yml  tests.yml
docker/postgres/: init-postgres.sql
docker/python/: Dockerfile
scripts/: start.sh
src/: constants.py  settings.py
src/core/: exceptions.py  filters.py  utils.py
src/core/enums/: group.py
src/core/filters/: base.py  group.py
src/core/interfaces/: email.py
src/core/interfaces/repositories/: base.py  group.py  user.py
src/core/models/: base.py  group.py  user.py
src/core/schemas/: auth.py  base.py  email.py  group.py  jwt.py  user.py
src/core/services/: auth.py  group.py  jwt.py  user.py
src/infrastructure/: celery.py  email.py
src/infrastructure/database/: connection.py
src/infrastructure/database/migrations/: env.py
src/infrastructure/database/migrations/versions/: 082660dbd0b1_add_is_superuser_to_user_table.py  1005c550d415_add_users_table.py  56f9f4521863_add_users_table.py  9d9479b33ccb_.py  9d9479b33ccb_add_group_tables.py
src/infrastructure/database/tables/: __init__.py  group.py  user.py
src/infrastructure/repositories/: group.py  sqlalchemy.py  user.py
src/settings/: __init__.py  application.py  celery.py  database.py  email.py  jwt.py
src/tests/: conftest.py
src/tests/fakes/: database.py  email.py
src/tests/fakes/repositories/: group.py  user.py
src/tests/integration/infrastructure/repositories/sqalchemy/: test_user.py
src/tests/integration/web/api/v1/routes/: conftest.py  test_auth.py  test_group.py  test_user.py
src/tests/unit/core/: test_filters.py
src/tests/unit/core/models/: test_user.py
src/tests/unit/core/schemas/: test_user.py
src/tests/unit/core/services/: test_auth.py  test_group.py  test_jwt.py  test_user.py
src/web/: application.py
src/web/api/v1/: annotations.py  dependencies.py  router.py
src/web/api/v1/routes/: auth.py  group.py  user.py
src/web/api/v1/schemas/: base.py  group.py  user.py
templates/: password_reset.html  user_activation.html
tests/: conftest.py
tests/fakes/: database.py  email.py
tests/fakes/repositories/: group.py  user.py
tests/integration/infrastructure/repositories/sqalchemy/: test_user.py
tests/integration/web/api/v1/routes/: test_group.py
tests/unit/core/: test_filters.py
tests/unit/core/schemas/: test_email.py  test_user.py
tests/unit/core/services/: test_user.py
