[tool.poetry]
name = "netizen2"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.89.1"
alembic = "^1.9.2"
SQLAlchemy = {version = "^2.0.0", extras = ["mypy", "asyncio"]}
pydantic = "^1.10.4"
greenlet = "^2.0.1"
dynaconf = "^3.1.11"
uvicorn = "^0.20.0"
httpx = "^0.23.3"
python-dotenv = "^0.21.0"
pytest-asyncio = "^0.20.3"
asyncpg = "^0.27.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1.3"
flake8 = "~4.0.1"
mypy = "^0.981"
isort = "^5.10.1"
yesqa = "^1.4.0"
pre-commit = "^2.20.0"
wemake-python-styleguide = "^0.17.0"
black = "^22.8.0"
autoflake = "^1.6.1"

[tool.isort]
profile = "black"
multi_line_output = 3
src_paths = ["src",]

[tool.mypy]
strict = true
ignore_missing_imports = true
allow_subclassing_any = true
allow_untyped_calls = true
pretty = true
show_error_codes = true
implicit_reexport = true
allow_untyped_decorators = true
warn_unused_ignores = false
warn_return_any = false
namespace_packages = true
plugins = ["sqlalchemy.ext.mypy.plugin"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
