[tool.poetry]
name = "netizen2"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.103.0"
pydantic = "^2.4.2"
pydantic-settings = "^2.0.3"
email-validator = "^2.0.0.post2"
alembic = "^1.12.0"
SQLAlchemy = {version = "^2.0.22", extras = ["asyncio"]}
greenlet = "^2.0.2"
dynaconf = "^3.2.3"
uvicorn = "^0.23.2"
httpx = "^0.25.0"
python-dotenv = "^1.0.0"
asyncpg = "^0.27.0"
passlib = "^1.7.4"
bcrypt = "^4.0.1"
python-jose = "^3.3.0"
Jinja2 = "^3.1.2"
python-multipart = "^0.0.6"
celery = "^5.3.4"
redis = "^5.0.1"

[tool.poetry.dev-dependencies]
pytest-asyncio = "^0.20.3"
pytest-mock = "^3.12.0"
coverage = "^7.3.2"
pytest = "^7.4.2"
flake8 = "~4.0.1"
mypy = "^0.981"
isort = "^5.12.0"
yesqa = "^1.5.0"
pre-commit = "^2.21.0"
wemake-python-styleguide = "^0.17.0"
black = "^22.12.0"
autoflake = "^1.7.8"

[tool.isort]
profile = "black"
multi_line_output = 3
src_paths = ["src",]

[tool.mypy]
strict = true
ignore_missing_imports = true
allow_subclassing_any = true
allow_untyped_calls = true
pretty = true
show_error_codes = true
implicit_reexport = true
allow_untyped_decorators = true
warn_unused_ignores = false
warn_return_any = false
namespace_packages = true
plugins = ["sqlalchemy.ext.mypy.plugin"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
